Create Details page

--- a/views/partials/catalogPreview.hbs
+++ b/views/partials/catalogPreview.hbs
@@ -2,7 +2,7 @@
     <h3>{{name}}</h3>
     <p>{{description}}</p>
 
-    <div class="cta-container"><a href="/details/{{_id}}" class="det-link">Details</a></div>
+    <div class="cta-container"><a href="/catalog/{{_id}}" class="det-link">Details</a></div>
     <div class="card_circle"><img src="{{houseImg}}"></div>
 
 </div>
