Finish the Application with the bonus part

--- a/views/details.hbs
+++ b/views/details.hbs
@@ -35,7 +35,7 @@
                 {{else}}
 
                 {{#if remainingPieces}}
-                <a href="/rentHome/{{_id}}" class="rentHome">Rent a home, available 2 housing</a>
+                <a href="/rent/{{_id}}" class="rentHome">{{remainingPieces}}</a>
 
                 {{else}}
                 <p class="no-housing">No Housing Available!</p>
